# Nextube-Remaster

./: CMakeLists.txt  README.md  sdkconfig.defaults  version.json
.github/workflows/: build.yml
components/audio/: CMakeLists.txt  audio.c
components/board/include/: board_pins.h
components/config_mgr/: CMakeLists.txt  config_mgr.c
components/config_mgr/include/: config_mgr.h  fw_version.h
components/display/: CMakeLists.txt  display.c
components/leds/: CMakeLists.txt  leds.c
components/leds/include/: leds.h
components/ntp_time/: ntp_time.c
components/ntp_time/include/: ntp_time.h
components/rtc/: CMakeLists.txt  rtc_pcf8563.c
components/touch/: CMakeLists.txt  touch_input.c
components/weather/: weather.c
components/web_server/: web_server.c
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/youtube_bili/: CMakeLists.txt  youtube_bili.c
data/: config.json
data/web/: index.html
main/: fw_version.h.in  idf_component.yml  main.c
